# PopuOS

./: CMakeLists.txt  README.md  input.txt  main.cpp  os.cpp  output.txt  sample_programs.txt
OperatingSystem/: Flags.h  Processor.cpp  Processor.h  ProgramControlRegister.cpp  ProgramControlRegister.h  RegisterBank.cpp  RegisterBank.h  Utility.h
stdio/: input.txt  output.txt  syslog.txt
